<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.2.0.0" ProductVersion="3.1.4024.9">
  <DUT Name="Device_1_EtherCAT_12D51B15" Id="{ba265182-604b-0ad9-0587-bf3a44423dc2}">
    <Declaration><![CDATA[{attribute 'GeneratedUsingTerminal: IODEVICETYPE_ETHERCATPROT'}
{attribute addProperty BoxType "IODEVICETYPE_ETHERCATPROT"}
{attribute addProperty Id "Term_1_EK1200Term_1_EK1200_19D5475C248SyncUnitsSyncUnits_1397309536InputsInputs_A65FACA410OutputsOutputs_23C0ED1D6InfoDataInfoData_84133AC922"}
{attribute addProperty CRC "315955989"}
{attribute addProperty Size "322"}
TYPE Device_1_EtherCAT_12D51B15 :
STRUCT
	{attribute addProperty Name "Term_1_EK1200"}
	{attribute addProperty PreviousPort "Device 1 (EtherCAT) : Master"}
	Term_1_EK1200 : Term_1_EK1200_19D5475C;
	{attribute addProperty Name "SyncUnits"}
	SyncUnits : SyncUnits_13973095;
	{attribute addProperty Name "Inputs"}
	Inputs : TcoIo.Inputs_A65FACA4;
	{attribute addProperty Name "Outputs"}
	Outputs : TcoIo.Outputs_23C0ED1D;
	{attribute addProperty Name "InfoData"}
	InfoData : TcoIo.InfoData_84133AC9;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>