<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.2.0.0" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_iXlinker" Id="{8c8ab4d2-71ba-0d60-3803-08223d861ccc}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
		Device_1_EtherCAT : Device_1_EtherCAT_5F7A63CE;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>