<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="tcc" Id="{e080c9bb-bd0c-0413-089e-5010da0ed8e6}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK tcc EXTENDS TcoCore.TcoContext
VAR
	{attribute addProperty Name "Device 1 (EtherCAT)"}
	Device_1 : TcoIo.TcoEthercatMasterDevice(THIS^);
	{attribute addProperty Name "Device 2 (EtherCAT)"}
	Device_2 : TcoIo.TcoEthercatMasterDevice(THIS^);
	{attribute addProperty Name "EtherCAT component"}
	EcatComponent : TestEcatComponent(THIS^);
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="FB_init" Id="{f7fa143a-719c-0a32-285f-ab35d5025a13}">
      <Declaration><![CDATA[{attribute 'hide'}
METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="Main" Id="{cae54242-7157-0c7b-3a57-550e091f822a}">
      <Declaration><![CDATA[(*~
	<docu>
		<summary>
			Main method of the TcoContext. This is the entry point of any control logic that belongs to this context. 
			The call of this method is ensured by calling the <c>InstanceName.Run()</c> method, and it must not be called explicitly.
			This method is abstract, and it must be overridden in derived block.
		</summary>
	</docu>
~*)
METHOD PROTECTED  Main
VAR
	ams: AMSADDR;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
Device_1(	SyncUnits		:= ADR(		GVL_iXlinker.Device_1_EtherCAT.SyncUnits),
			SyncUnitsSize	:= SIZEOF(	GVL_iXlinker.Device_1_EtherCAT.SyncUnits),
			Inputs			:=			GVL_iXlinker.Device_1_EtherCAT.Inputs,
			InfoData		:=			GVL_iXlinker.Device_1_EtherCAT.InfoData);	

			
Device_2(	SyncUnits		:= ADR(		GVL_iXlinker.Device_2_EtherCAT.SyncUnits),
			SyncUnitsSize	:= SIZEOF(	GVL_iXlinker.Device_2_EtherCAT.SyncUnits),
			Inputs			:=			GVL_iXlinker.Device_2_EtherCAT.Inputs,
			InfoData		:=			GVL_iXlinker.Device_2_EtherCAT.InfoData);	
			
EcatComponent(AdsAddr:=ams);

]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>